--- a/index.html
+++ b/index.html
@@ -2,9 +2,11 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title></title>
+    <title>Broadway</title>
+    <link rel=stylesheet href="resources/style.css" />
   </head>
   <body>
+    <h1>Broadway</h1>
 
   </body>
 </html>
